--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+#config.directory.path=D:/Programming/Java/Spring_Projects/JSQLParser_POC/JSQL-POC/src/main/resources/sql
+config.directory.path = sql
